force-app/main/default/objects/Case/fields/Common_Name__c.field-meta.xml
<CustomField>
    <fullName>Common_Name__c</fullName>
    <description>Displays the Common Name of the facility on the Case record page</description>
    <formula>TUC_Assigned_Facility__r.Common_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Common Name of the Facility</inlineHelpText>
    <label>Common Name</label>
    <type>Text</type>
</CustomField>