force-app/main/default/objects/Case/fields/Delete_Me__c.field-meta.xml
<CustomField>
    <fullName>Delete_Me__c</fullName>
    <formula>DATE ( YEAR (DATEVALUE(CreatedDate)),3,1) + ( 14- CASE( MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),3,1) - DATE (1900,1,7),7) , 0,7,MOD(DATE ( YEAR
        (DATEVALUE(CreatedDate)),3,1) - DATE (1900,1,7),7)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delete Me</label>
    <type>Date</type>
</CustomField>