force-app/main/default/objects/Case/fields/Follow_Up_Appt_Needed__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Appt_Needed__c</fullName>
    <description>Used by Medical Provider when a follow up appointment is needed after a virtual visit appointment</description>
    <inlineHelpText>Select when an appointment is needed for the veteran</inlineHelpText>
    <label>Follow-Up Appt Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Within 24 Hrs</fullName>
            </value>
            <value>
                <fullName>Within 24-72 Hrs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>