force-app/main/default/objects/Case/fields/Hour_Closed_2__c.field-meta.xml
<CustomField>
    <fullName>Hour_Closed_2__c</fullName>
    <formula
    >IF ( DATEVALUE(ClosedDate) &gt;= DATE ( YEAR (DATEVALUE(ClosedDate)),3,1) + ( 14- CASE( MOD(DATE ( YEAR (DATEVALUE(ClosedDate)),3,1) - DATE (1900,1,7),7) , 0,7,MOD(DATE (
        YEAR (DATEVALUE(ClosedDate)),3,1) - DATE (1900,1,7),7)) ) &amp;&amp; DATEVALUE(ClosedDate) &lt; DATE ( YEAR (DATEVALUE(ClosedDate)),11,1) + ( 7- CASE( MOD(DATE ( YEAR
        (DATEVALUE(ClosedDate)),11,1) - DATE (1900,1,7),7) , 0,7,MOD(DATE ( YEAR (DATEVALUE(ClosedDate)),11,1) - DATE (1900,1,7),7)) ), MID(TEXT( ClosedDate + ((1+
        VCC_UserTimezoneOffset__c ) / 24) ),12,2) + &quot;:00&quot;, MID(TEXT( ClosedDate + ( VCC_UserTimezoneOffset__c / 24) ),12,2) + &quot;:00&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hour Closed 2</label>
    <type>Text</type>
</CustomField>