force-app/main/default/objects/Case/fields/Hour_Opened__c.field-meta.xml
<CustomField>
    <fullName>Hour_Opened__c</fullName>
    <description>The hour the case was opened. This also accounts for daylight savings from 2nd Sunday in March to 1st Sunday in November.</description>
    <formula
    >IF ( DATEVALUE(CreatedDate) &gt;= DATE ( YEAR (DATEVALUE(CreatedDate)),3,1) + ( 14- CASE( MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),3,1) - DATE (1900,1,7),7) , 0,7,MOD(DATE
        ( YEAR (DATEVALUE(CreatedDate)),3,1) - DATE (1900,1,7),7)) ) &amp;&amp; DATEVALUE(CreatedDate) &lt; DATE ( YEAR (DATEVALUE(CreatedDate)),11,1) + ( 7- CASE( MOD(DATE ( YEAR
        (DATEVALUE(CreatedDate)),11,1) - DATE (1900,1,7),7) , 0,7,MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),11,1) - DATE (1900,1,7),7)) ), MID(TEXT( CreatedDate + ((1+
        VCC_UserTimezoneOffset__c ) / 24) ),12,2) + &quot;:00&quot;, MID(TEXT( CreatedDate + ( VCC_UserTimezoneOffset__c / 24) ),12,2) + &quot;:00&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hour Opened</label>
    <type>Text</type>
</CustomField>