force-app/main/default/objects/Case/fields/PC_Case_is_assigned__c.field-meta.xml
<CustomField>
    <fullName>PC_Case_is_assigned__c</fullName>
    <formula>IF( OwnerId != CreatedById,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case is assigned</label>
    <type>Checkbox</type>
</CustomField>