force-app/main/default/objects/Case/fields/PC_Channel__c.field-meta.xml
<CustomField>
    <fullName>PC_Channel__c</fullName>
    <description>Indicates the method of contact selected by the provider.</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Teams</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>