force-app/main/default/objects/Case/fields/PC_Specialist_Comments__c.field-meta.xml
<CustomField>
    <fullName>PC_Specialist_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Specialist Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>