force-app/main/default/objects/Case/fields/PC_Specialty__c.field-meta.xml
<CustomField>
    <fullName>PC_Specialty__c</fullName>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PC_Specialties</valueSetName>
    </valueSet>
</CustomField>