force-app/main/default/objects/Case/fields/TED_Age__c.field-meta.xml
<CustomField>
    <fullName>TED_Age__c</fullName>
    <description>Formula to pull in age from Person Account</description>
    <formula>Account.PersonContact.HealthCloudGA__Age__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <type>Text</type>
</CustomField>