force-app/main/default/objects/Case/fields/TED_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>TED_Birthdate__c</fullName>
    <description>Formula to pull in birthdate from Person Account</description>
    <formula>Account.PersonContact.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>