force-app/main/default/objects/Case/fields/TED_Contact_Current_Email__c.field-meta.xml
<CustomField>
    <fullName>TED_Contact_Current_Email__c</fullName>
    <description>Email the patient wishes to have the VVC link sent to</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Email</label>
    <type>Email</type>
</CustomField>