force-app/main/default/objects/Case/fields/TED_CSSRS_Screening_Result__c.field-meta.xml
<CustomField>
    <fullName>TED_CSSRS_Screening_Result__c</fullName>
    <description>Displays the result of the C-SSRS. This field works as a visibility filter for C-SSRS Banners in a Tele-EC Case Record Page and is populated by the New Tele Emergency Case Flow.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the result of the screening.</inlineHelpText>
    <label>C-SSRS Screening Result</label>
    <length>50</length>
    <type>Text</type>
</CustomField>