force-app/main/default/objects/Case/fields/TED_Gender__c.field-meta.xml
<CustomField>
    <fullName>TED_Gender__c</fullName>
    <description>Formula to pull in gender from Person Account</description>
    <formula>TEXT(Account.PersonContact.HealthCloudGA__Gender__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gender</label>
    <type>Text</type>
</CustomField>