force-app/main/default/objects/Case/fields/TED_Is_Tele_Case__c.field-meta.xml
<CustomField>
    <fullName>TED_Is_Tele_Case__c</fullName>
    <description>Identifies case as a Tele-EC Case for metric calculations</description>
    <formula>OR(RecordType.DeveloperName = &apos;Tele_Urgent_Care_0_2_Hours&apos;, RecordType.DeveloperName = &apos;Tele_Urgent_Care_2_8_Hours_Case&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Tele Case</label>
    <type>Checkbox</type>
</CustomField>