force-app/main/default/objects/Case/fields/TED_Preferred_Call_Back_Time__c.field-meta.xml
<CustomField>
    <fullName>TED_Preferred_Call_Back_Time__c</fullName>
    <description>Patient&apos;s preferred call back time</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Preferred Call Back Time</label>
    <type>DateTime</type>
</CustomField>