force-app/main/default/objects/Case/fields/TED_Time_Spent_in_Ready_for_MP__c.field-meta.xml
<CustomField>
    <fullName>TED_Time_Spent_in_Ready_for_MP__c</fullName>
    <description>Used to calculate the time spent in Ready for MP. Used in TUC Case Stage Total Time Set flow</description>
    <formula>IF(ISPICKVAL(Status,&quot;Ready for MP&quot;), ROUND(((NOW() - TUC_Status_Change_Time_Holder__c) *1440),0), TED_Total_Time_in_Ready_for_MP__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Spent in Ready for MP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>