force-app/main/default/objects/Case/fields/TED_Total_Time_in_Nurse_Encounter__c.field-meta.xml
<CustomField>
    <fullName>TED_Total_Time_in_Nurse_Encounter__c</fullName>
    <description>Captures the total time in Nurse Encounter. Used in TUC Case Stage Total Time Set flow.</description>
    <label>Total Time in Nurse Encounter</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>