force-app/main/default/objects/Case/fields/TEDCaseRecordTypeBucket__c.field-meta.xml
<CustomField>
    <fullName>TEDCaseRecordTypeBucket__c</fullName>
    <description>Used for reporting purposes.</description>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TEDCaseRecordTypeBucket</label>
    <type>Text</type>
</CustomField>