force-app/main/default/objects/Case/fields/TUC_Assigned_Facility__c.field-meta.xml
<CustomField>
    <fullName>TUC_Assigned_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to all VA Facilities</description>
    <label>Facility</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Facility</relationshipLabel>
    <relationshipName>Facility</relationshipName>
    <type>Lookup</type>
</CustomField>