force-app/main/default/objects/Case/fields/TUC_Call_Back_Attempts__c.field-meta.xml
<CustomField>
    <fullName>TUC_Call_Back_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures number of call back attempts. Updated in the TUCUnableToCallBackPatient flow</description>
    <label>Call Back Attempts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>