force-app/main/default/objects/Case/fields/TUC_Callback_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TUC_Callback_Date_Time__c</fullName>
    <description>Capture call back date and time in order to provide patient care with in 2- 8 Hours.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter date and time.</inlineHelpText>
    <label>Callback Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>