force-app/main/default/objects/Case/fields/TUC_Callback_Number__c.field-meta.xml
<CustomField>
    <fullName>TUC_Callback_Number__c</fullName>
    <description>Used to capture the preferred telephone number where the caller may be reached if the call disconnects.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Callback Number</label>
    <type>Phone</type>
</CustomField>