force-app/main/default/objects/Case/fields/TUC_Callback_Type__c.field-meta.xml
<CustomField>
    <fullName>TUC_Callback_Type__c</fullName>
    <description>Used to capture the way to callback the caller, known as modality. Previous label Callback Type.</description>
    <label>Type of Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>VVC</fullName>
            </value>
            <value>
                <fullName>Chart Consult</fullName>
            </value>
            <value>
                <fullName>CVT</fullName>
            </value>
            <value>
                <fullName>Mobile Phone</fullName>
                <isActive>false</isActive>
                <label>Mobile Phone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>