force-app/main/default/objects/Case/fields/TUC_Current_Location__c.field-meta.xml
<CustomField>
    <fullName>TUC_Current_Location__c</fullName>
    <description>Enter patient&apos;s address or current location description where medical assistance is needed.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter patient&apos;s address or current location description where medical assistance is needed.</inlineHelpText>
    <label>Current Location</label>
    <type>TextArea</type>
</CustomField>