force-app/main/default/objects/Case/fields/TUC_Facility_Id__c.field-meta.xml
<CustomField>
    <fullName>TUC_Facility_Id__c</fullName>
    <description>Pulls the facility ID from the Assigned Facility record</description>
    <formula>RIGHT(TUC_Assigned_Facility__r.VAF_Facility_ID__c, (LEN( TUC_Assigned_Facility__r.VAF_Facility_ID__c) - FIND(&apos;_&apos;,
        TUC_Assigned_Facility__r.VAF_Facility_ID__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility ID</label>
    <type>Text</type>
</CustomField>