force-app/main/default/objects/Case/fields/TUC_Status_Change_Time_Holder__c.field-meta.xml
<CustomField>
    <fullName>TUC_Status_Change_Time_Holder__c</fullName>
    <description>Used in flow for formula fields to use later. Will hold the NOW() Value for when a status changes</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Change Time Holder</label>
    <type>DateTime</type>
</CustomField>