force-app/main/default/objects/Case/fields/TUC_System_WHEN_from_PN__c.field-meta.xml
<CustomField>
    <fullName>TUC_System_WHEN_from_PN__c</fullName>
    <description>Used in New Tele Emergency Case Case flow. Updated with System When field on Progress Note</description>
    <encryptionScheme>None</encryptionScheme>
    <label>System WHEN from PN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>