force-app/main/default/objects/Case/fields/TUC_Time_Spent_in_New__c.field-meta.xml
<CustomField>
    <fullName>TUC_Time_Spent_in_New__c</fullName>
    <description>Time in minutes spent in New</description>
    <formula>IF(ISPICKVAL(Status,&quot;New&quot;), ROUND(((NOW() - CreatedDate)*1440),0), TUC_Total_Time_in_New__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time in minutes spent in New</inlineHelpText>
    <label>Time Spent in New</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>