force-app/main/default/objects/Case/fields/TUC_Time_Spent_in_Patient_Call_Back__c.field-meta.xml
<CustomField>
    <fullName>TUC_Time_Spent_in_Patient_Call_Back__c</fullName>
    <description>Time spent in minutes in Patient Call Back</description>
    <formula>IF (ISPICKVAL(Status,&quot;Patient Call Back&quot;), ROUND(((NOW() - TUC_Status_Change_Time_Holder__c )*1440),0), TUC_Total_Time_in_Patient_Call_Back__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time spent in minutes in Patient Call Back</inlineHelpText>
    <label>Time Spent in Patient Call Back</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>