force-app/main/default/objects/Case/fields/TUC_Total_Time__c.field-meta.xml
<CustomField>
    <fullName>TUC_Total_Time__c</fullName>
    <description>Total time spent in minutes in Total</description>
    <formula>IF(IsClosed, ROUND(((ClosedDate - CreatedDate) *1440),0), ROUND(((NOW() - CreatedDate ) *1440),0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total time spent in minutes in Total</inlineHelpText>
    <label>Total Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>