force-app/main/default/objects/Case/fields/TUC_Total_Time_in_New__c.field-meta.xml
<CustomField>
    <fullName>TUC_Total_Time_in_New__c</fullName>
    <description>Total time spent in minutes in New</description>
    <inlineHelpText>Total time spent in minutes in New</inlineHelpText>
    <label>Total Time in New</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>