force-app/main/default/objects/Case/fields/TUC_Total_Time_in_Patient_Call_Back__c.field-meta.xml
<CustomField>
    <fullName>TUC_Total_Time_in_Patient_Call_Back__c</fullName>
    <description>Total time spent in minutes in Patient Call Back</description>
    <inlineHelpText>Total time spent in minutes in Patient Call Back</inlineHelpText>
    <label>Total Time in Patient Call Back</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>