force-app/main/default/objects/Case/fields/VCC_Appointment_Service__c.field-meta.xml
<CustomField>
    <fullName>VCC_Appointment_Service__c</fullName>
    <description>Type of Appointment Requested by Patient.</description>
    <label>Appointment Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCC Virtual Clinic Visit (VCV)</fullName>
            </value>
            <value>
                <fullName>Primary Care</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Specialty Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>