force-app/main/default/objects/Case/fields/VCC_Caller_Name__c.field-meta.xml
<CustomField>
    <fullName>VCC_Caller_Name__c</fullName>
    <description>The name of the caller if the the Caller Relation to Veteran is not &quot;Self&quot;. Populated via the Verify Caller process.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the caller if the the Caller Relation to Veteran is not &quot;Self&quot;. Populated via the Verify Caller process.</inlineHelpText>
    <label>Caller Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>