force-app/main/default/objects/Case/fields/VCC_Case_Outcome__c.field-meta.xml
<CustomField>
    <fullName>VCC_Case_Outcome__c</fullName>
    <description>Specify the Outcome of the Case</description>
    <inlineHelpText>Specify the Outcome of the Case</inlineHelpText>
    <label>Case Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>911</fullName>
            </value>
            <value>
                <fullName>Call Dropped/Not Resolved</fullName>
            </value>
            <value>
                <fullName>Call Dropped - Could not Reconnect</fullName>
            </value>
            <value>
                <fullName>CCC VCV No Follow-Up Needed</fullName>
            </value>
            <value>
                <fullName>CCC Virtual Clinic Visit</fullName>
            </value>
            <value>
                <fullName>Consult to CCC Pharmacist</fullName>
            </value>
            <value>
                <fullName>Consult to Local Pharmacy</fullName>
            </value>
            <value>
                <fullName>Diagnostics Ordered</fullName>
            </value>
            <value>
                <fullName>Emergency Dept</fullName>
            </value>
            <value>
                <fullName>Follow Up PACT/VAMC</fullName>
            </value>
            <value>
                <fullName>Lead Pharmacy Technician Resolved</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Message Sent/ Progress Note</fullName>
            </value>
            <value>
                <fullName>MSA/Scheduling</fullName>
            </value>
            <value>
                <fullName>No Answer Message Left</fullName>
            </value>
            <value>
                <fullName>PACT Team</fullName>
            </value>
            <value>
                <fullName>Patient Stayed Home</fullName>
            </value>
            <value>
                <fullName>Patient was No Show (No Welfare check)</fullName>
            </value>
            <value>
                <fullName>Patient was No Show (Welfare check requested)</fullName>
            </value>
            <value>
                <fullName>Pharmacist Resolved</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Pharmacy Technician Resolved</fullName>
            </value>
            <value>
                <fullName>PN to Clinician</fullName>
            </value>
            <value>
                <fullName>PN to Team</fullName>
            </value>
            <value>
                <fullName>Prescription Ordered</fullName>
            </value>
            <value>
                <fullName>Primary Care</fullName>
            </value>
            <value>
                <fullName>Primary Care/PACT</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Refilled Medication</fullName>
            </value>
            <value>
                <fullName>Renewed Medication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>