force-app/main/default/objects/Case/fields/VCC_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>VCC_Case_Reason__c</fullName>
    <description>Reason for Case</description>
    <inlineHelpText>Reason for Case</inlineHelpText>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>VCC_Case_Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appointments</fullName>
            </value>
            <value>
                <fullName>Back Ordered</fullName>
            </value>
            <value>
                <fullName>Benefits &amp; Enrollment</fullName>
            </value>
            <value>
                <fullName>Cancel Appointment</fullName>
            </value>
            <value>
                <fullName>Change of Medication Status</fullName>
            </value>
            <value>
                <fullName>Community Care</fullName>
            </value>
            <value>
                <fullName>Community Care Information</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Consult</fullName>
            </value>
            <value>
                <fullName>Consult/Referral</fullName>
            </value>
            <value>
                <fullName>Contacted Local Site Regarding Status of CC Rx</fullName>
            </value>
            <value>
                <fullName>COVID 19 Test Result</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Demographic Update</fullName>
            </value>
            <value>
                <fullName>Diagnostic Results</fullName>
            </value>
            <value>
                <fullName>Direct Scheduling</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Education (Clinical)</fullName>
            </value>
            <value>
                <fullName>Eligibility/Registration</fullName>
            </value>
            <value>
                <fullName>Follow-up Call</fullName>
            </value>
            <value>
                <fullName>General Inquiry</fullName>
            </value>
            <value>
                <fullName>Homicidal Ideation</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>In Transit</fullName>
            </value>
            <value>
                <fullName>Lost Delivery/Damaged Package</fullName>
            </value>
            <value>
                <fullName>Lost or Stolen</fullName>
            </value>
            <value>
                <fullName>Med Refill/Renewal</fullName>
            </value>
            <value>
                <fullName>Medication Counseling by Pharmacist</fullName>
            </value>
            <value>
                <fullName>Medication Extension Provided</fullName>
            </value>
            <value>
                <fullName>Medication Recall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>