force-app/main/default/objects/Case/fields/VCC_Case_Reason_Multi__c.field-meta.xml
<CustomField>
    <fullName>VCC_Case_Reason_Multi__c</fullName>
    <description>Reason why patient is calling-Multiselect</description>
    <inlineHelpText>Reason why patient is calling</inlineHelpText>
    <label>Case Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>VCC_Case_Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schedule Appointment</fullName>
            </value>
            <value>
                <fullName>Cancel Appointment</fullName>
            </value>
            <value>
                <fullName>Verify Appointment</fullName>
            </value>
            <value>
                <fullName>Request Call Back</fullName>
            </value>
            <value>
                <fullName>Benefits &amp; Enrollment</fullName>
            </value>
            <value>
                <fullName>Community Care/ Mission Act</fullName>
            </value>
            <value>
                <fullName>Consult Request</fullName>
            </value>
            <value>
                <fullName>Death Notification</fullName>
            </value>
            <value>
                <fullName>Home Health/Nursing Home</fullName>
            </value>
            <value>
                <fullName>Lab/ Imaging Result</fullName>
            </value>
            <value>
                <fullName>Medical Equipment Request</fullName>
            </value>
            <value>
                <fullName>Medication Refill/Renewal</fullName>
            </value>
            <value>
                <fullName>Outside Care Performed</fullName>
            </value>
            <value>
                <fullName>Paperwork Request</fullName>
            </value>
            <value>
                <fullName>Update Demographic</fullName>
            </value>
            <value>
                <fullName>Dropped Call</fullName>
            </value>
            <value>
                <fullName>Returned Call</fullName>
            </value>
            <value>
                <fullName>Medication Refill</fullName>
            </value>
            <value>
                <fullName>Medication Renewal</fullName>
            </value>
            <value>
                <fullName>Prescription Status</fullName>
            </value>
            <value>
                <fullName>Prescription Tracking</fullName>
            </value>
            <value>
                <fullName>Facility Information</fullName>
            </value>
            <value>
                <fullName>Community Care Information</fullName>
            </value>
            <value>
                <fullName>Urgent First Fill Issues</fullName>
            </value>
            <value>
                <fullName>Med List Reconciliation</fullName>
            </value>
            <value>
                <fullName>Mission Act Information</fullName>
            </value>
            <value>
                <fullName>Clinical Question(s)</fullName>
            </value>
            <value>
                <fullName>Medication Recall</fullName>
            </value>
            <value>
                <fullName>Side Effect/ADR</fullName>
            </value>
            <value>
                <fullName>Crisis Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>