force-app/main/default/objects/Case/fields/VCC_Case_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>VCC_Case_Sub_Type__c</fullName>
    <description>Categorize the Case for reporting purposes.</description>
    <inlineHelpText>Categorize the Case for reporting purposes.</inlineHelpText>
    <label>Case Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>VCC_Case_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Community Care</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Emergent</fullName>
            </value>
            <value>
                <fullName>Medication Status</fullName>
            </value>
            <value>
                <fullName>Non-Emergent</fullName>
            </value>
            <value>
                <fullName>Telephone Virtual Visit</fullName>
                <label>Phone</label>
            </value>
            <value>
                <fullName>Refill Medication</fullName>
            </value>
            <value>
                <fullName>Renew Medication</fullName>
            </value>
            <value>
                <fullName>Scheduling</fullName>
            </value>
            <value>
                <fullName>Triage</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>Urgent First Fill</fullName>
            </value>
            <value>
                <fullName>Video Virtual Visit</fullName>
                <label>Video</label>
            </value>
            <value>
                <fullName>PHR VCV</fullName>
            </value>
            <value>
                <fullName>Administrative and Scheduling</fullName>
                <label>Scheduling and Administrative</label>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Pharmacy Quality Assurance Issue</fullName>
            </value>
            <value>
                <fullName>Medication Error</fullName>
                <isActive>false</isActive>
                <label>Medication Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>