force-app/main/default/objects/Case/fields/VCC_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>VCC_Case_Type__c</fullName>
    <description>Type of Case the caller is calling about</description>
    <inlineHelpText>Type of Case the caller is calling about</inlineHelpText>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Symptom</fullName>
            </value>
            <value>
                <fullName>VCV</fullName>
            </value>
            <value>
                <fullName>Tele-Emergency Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>