force-app/main/default/objects/Case/fields/VCC_Date_Patient_Verified__c.field-meta.xml
<CustomField>
    <fullName>VCC_Date_Patient_Verified__c</fullName>
    <description>Date the last time the caller was verified as the veteran or an authorized representative in relation to this case.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the last time the caller was verified as the veteran or an authorized representative in relation to this case.</inlineHelpText>
    <label>Date Patient Verified</label>
    <type>DateTime</type>
</CustomField>